  *   - Fixed AVRISP-MKII Clone compile warning on AVR8 U4 targets even when NO_VTARGET_DETECT is enabled
  *   - Fixed AVRISP-MKII Clone failing to start application firmware once a TPI programming session is exited
  *   - Fixed DFU class bootloader not resetting the LED pins as high impedance inputs when a software jump to the user applications is requested
  *
  *  \section Sec_ChangeLog111009 Version 111009
  *  <b>New:</b>
  *  - Core:
  *   - Added USE_LUFA_CONFIG_HEADER compile time option to include a LUFAConfig.h header in the user director for LUFA configuration
  *     tokens as an alternative to tokens defined in the project makefile
  *   - Added new USB_Host_SetInterfaceAltSetting() convenience function for the selection of an interface's alternative setting
  *   - Added Audio class control request definitions
  *   - Added new CALLBACK_Audio_Device_GetSetEndpointProperty() callback to the Audio Device Class driver to allow for endpoint control manipulations
  *     such as data sample rates
  *   - Added support for the Audio class GET STATUS request in the Audio Device Class driver so that it is correctly ACKed when sent by the host
  *   - Added new EVENT_Audio_Device_StreamStartStop() event to the Audio Device Class driver to detect stream start/stop events
  *   - Added board driver support for the Busware TUL board
  *   - Added board hardware driver support for the EVK1100 board
  *   - Added board hardware driver support for the EVK1104 board
  *   - Added new Host mode Audio Class driver
  *   - Added new SPI_GetCurrentMode() function to the SPI peripheral driver
  *   - Added RingBuffer_GetFreeCount() function to the Ring Buffer driver
  *   - Added new HID_Host_SetIdlePeriod() function to the HID Host Class driver
  *   - Added new USB_Host_ConfigurationNumber global variable to indicate the selected configuration in an attached device
  *   - Added new USB_Host_GetDeviceStatus() function to the host standard request function set